<resources>
    <string name="app_name">Preencher Cheque</string>
    <string name="app_title">PreenCheque</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleInsertNumber">Insira um Número</string>
    <string name="btOk">OK</string>
    <string name="resultado">Resultado</string>
    <string name="limpar">Limpar</string>
    <string name="espaco"> </string>
</resources>
